# dice-roller

./: .gitignore  CMakeLists.txt  D8.sln  dice_roller.sln  vcpkg.json
D8/: .clang-format  CMakeLists.txt  D8.vcxproj  D8.vcxproj.filters  Source.cpp  dependencies_without_module support.ixx  dnd_parsing.ixx  dnd_parsing_tests.cpp  formatting.ixx  formatting_tests.cpp  kob_parsing.ixx  kob_parsing_tests.cpp  main.cpp  parser.ixx  parser_tests.cpp  roll_description.ixx  streaming.ixx  system.ixx  tests.cpp  util.ixx  utility.ixx  vcpkg.json
